--- a/pallets/token-swap/Cargo.toml
+++ b/pallets/token-swap/Cargo.toml
@@ -14,6 +14,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
+primitives = { package = 'jur-primitives', path = '../../primitives', default-features = false }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
 frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20"}
 frame-system = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
@@ -23,10 +24,11 @@ sp-runtime = { default-features = false, version = "6.0.0", git = "https://githu
 serde = { version = "1.0.137", default-features = false }
 serde_derive = { version = "1.0.117", optional = true }
 rustc-hex = { version = "2.1.0", default-features = false }
+sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
+
 
 [dev-dependencies]
 sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
-sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
 
 [features]
 default = ["std"]
@@ -41,6 +43,8 @@ std = [
 	"rustc-hex/std",
 	"serde_derive",
 	"serde/std",
+	"primitives/std",
+	"sp-io/std",
 ]
 
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
