--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -54,6 +54,7 @@ frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/pari
 
 # Local Dependencies
 jur-node-runtime = { version = "4.0.0-dev", path = "../runtime" }
+primitives = { package = 'jur-primitives', path = '../primitives' }
 
 # CLI-specific dependencies
 try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
