--- a/pallets/token-swap/Cargo.toml
+++ b/pallets/token-swap/Cargo.toml
@@ -27,6 +27,7 @@ rustc-hex = { version = "2.1.0", default-features = false }
 sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
 sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
 rlp = {default-features = false, version ="0.5.1"}
+bs58 = { default-features = false, version = '0.4.0',features=['alloc']}
 
 [dev-dependencies]
 pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
@@ -51,6 +52,7 @@ std = [
 	"primitives/std",
 	"sp-io/std",
 	"sp-core/std",
+	"bs58/std",
 ]
 
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
