--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -12,6 +12,12 @@ sp-std = { default-features = false, version = "4.0.0", git = "https://github.co
 sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
 rustc-hex = { version = "2.1.0", default-features = false }
 serde_derive = { version = "1.0.117", optional = true }
+sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
+rlp = {default-features = false, version ="0.5.1"}
+frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
+
+[dev-dependencies]
+hex-literal = "0.3.4"
 
 [features]
 default = ["std"]
@@ -23,5 +29,8 @@ std = [
   "rustc-hex/std",
   "serde_derive",
   "serde/std",
+  "sp-io/std",
+  "rlp/std",
+  "frame-support/std",
 ]
 
