fix(config): Added filter for workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,3 +39,7 @@ workflows:
   prod-flow:
     jobs:
       - deploy-prod:
+          filters:
+            branches:
+              only:
+                - feat/docker-circleci
