fix(config): Updated docker compose command to run jur-node

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   service:
     image: registry.digitalocean.com/jur-jbp/jur-node:27JUN2022
+    command: jur-node # add --dev parameter to run in development mode
     ports:
       - 30333:30333
       - 9933:9933
