fix(config): Updated branch name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,4 @@ workflows:
           filters:
             branches:
               only:
-                - feat/docker-circleci
+                - main
