chore(config): Updated config for testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,4 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - feat/docker-circleci
