fix(circleCI): Updated configuration to run initial commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,14 @@ commands:
           name: Run deploy.sh on << parameters.instance >>
           command: |
             gcloud compute ssh --zone << parameters.zone >> circleci@<< parameters.instance >> --command "./deploy.sh ${DO_REGISTRY_TOKEN}"
-
+      - run:
+          name: Run Key Insert (Aura) command on << parameters.instance >>
+           command: |
+            docker exec jur_node_container jur-node key insert --chain jur-testnet --scheme Sr25519 --suri ${KEY_SET_AURA_1} --key-type aura
+      - run:
+          name: Run Key Insert (Granpa) command on << parameters.instance >>
+           command: |
+            docker exec jur_node_container jur-node key insert --chain jur-testnet --scheme Ed25519 --suri ${KEY_SET_GRANPA_1} --key-type gran
 jobs:
   deploy-prod:
     docker:
