--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,7 +3,8 @@ version: "3.8"
 services:
   service:
     image: registry.digitalocean.com/jur-jbp/jur-node:27JUN2022
-    command: jur-node --chain jur-testnet --port 30333 --ws-port 9945 --rpc-port 9933 --validator
+    container_name: jur_node_container
+    command: jur-node --dev
     ports:
       - 30333:30333
       - 9933:9933
