--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,7 +4,10 @@ services:
   service:
     image: registry.digitalocean.com/jur-jbp/jur-node:27JUN2022
     container_name: jur_node_container
-    command: jur-node --dev
+    command: |
+      jur-node key insert --chain jur-testnet --scheme Sr25519 --suri ${KEY_SET_AURA} --key-type aura && \
+      jur-node key insert --chain jur-testnet --scheme Ed25519 --suri ${KEY_SET_GRANPA} --key-type gran && \
+      jur-node --dev
     ports:
       - 30333:30333
       - 9933:9933
