--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,7 +4,7 @@ services:
   service:
     image: registry.digitalocean.com/jur-jbp/jur-node:13JUL2022
     container_name: jur_node_container
-    command: jur-node --chain jur-testnet --port 30333 --ws-port 9944 --rpc-port 9933 --validator --bootnodes /ip/35.206.83.115/p2p/12D3KooWKCP28KnSYD2K1T1ikb96hFb6TqnfdYT7ygVMHKvw4g8P
+    command: jur-node --chain jur-testnet --port 30333 --ws-port 9944 --rpc-port 9933 --validator --bootnodes /ip4/35.206.83.115/p2p/12D3KooWKCP28KnSYD2K1T1ikb96hFb6TqnfdYT7ygVMHKvw4g8P
     volumes:
       - data:/data
     ports:
