Create infrastructure for benchmarking and added benchmarking for update root

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -114,6 +114,7 @@ runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
 	"pallet-collective/runtime-benchmarks",
 	"pallet-membership/runtime-benchmarks",
+	"pallet-token-swap/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-executive/try-runtime",
@@ -128,4 +129,5 @@ try-runtime = [
 	"pallet-collective/try-runtime",
 	"pallet-membership/try-runtime",
 	"pallet-multisig/try-runtime",
+	"pallet-token-swap/try-runtime",
 ]
