--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,9 +4,10 @@ services:
   service:
     image: registry.digitalocean.com/jur-jbp/jur-node:13JUL2022-2
     container_name: jur_node_container
-    command: jur-node --chain jur-testnet --port 30333 --ws-port 9944 --rpc-port 9933 --validator --bootnodes /ip4/35.206.83.115/tcp/30333/p2p/12D3KooWBBb45AWo5cnFhurPav2aSgpsPewPfLmEdCW8Xw7wiuAF
+    command: jur-node --chain jur-testnet --port 30333 --ws-port 9944 --rpc-port 9933 --validator --bootnodes /ip4/35.209.0.147/tcp/30333/p2p/12D3KooWBBb45AWo5cnFhurPav2aSgpsPewPfLmEdCW8Xw7wiuAF
     volumes:
       - data:/data
+    restart: always
     ports:
       - 30333:30333
       - 9933:9933
