--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,17 +64,9 @@ jobs:
       - image: google/cloud-sdk
     steps:
       - run-deploy-sh:
-          instance: jur-node-prod-us-a-1
+          instance: jur-node-test-us-a-2
           aura_keyset: KEY_SET_AURA_1
           granpa_keyset: KEY_SET_GRANPA_1
-      - run-deploy-sh:
-          instance: jur-node-prod-us-a-2
-          aura_keyset: KEY_SET_AURA_2
-          granpa_keyset: KEY_SET_GRANPA_2
-      - run-deploy-sh:
-          instance: jur-node-prod-us-a-3
-          aura_keyset: KEY_SET_AURA_3
-          granpa_keyset: KEY_SET_GRANPA_3
 
 workflows:
   prod-flow:
