--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+
+    - name: Set-Up
+      run: sudo apt install -y git clang curl libssl-dev llvm libudev-dev protobuf-compiler
+
     - name: Install Rustup
       run: |
         curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
